# src/index.ts
@@ -15,6 +15,8 @@ import cartRouter from './routes/cart.js';
 import productRouter from './routes/product.js';
 import orderRouter from './routes/order.js';
 import locationRouter from './routes/location.js';
+import wishlistRouter from './routes/wishlist.js';
+import sellerRouter from './routes/seller.js';
 
 
 
@@ -31,6 +33,8 @@ app.use("/api/cart", cartRouter)
 app.use("/api/products", productRouter)
 app.use("/api/orders", orderRouter)
 app.use("/api/location", locationRouter)
+app.use("/api/wishlist", wishlistRouter)
+app.use("/api/seller", sellerRouter)
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
 const startServer = async () => {
