# src/routes/order.ts
@@ -6,4 +6,5 @@ const orderRouter = Router();
 orderRouter.post('/', authenticate, ctrl.createOrder);
 orderRouter.get('/', authenticate, ctrl.listOrders);
 orderRouter.get('/:id', authenticate, ctrl.getOrderById);
+orderRouter.patch('/:id/status', authenticate, ctrl.updateStatus);
 export default orderRouter;
